<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.restroplus.activity.SearchPage" 
    android:layout_height="match_parent"
    android:fillViewport="true"
     android:layout_width="match_parent">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin8"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginStart="@dimen/margin8"
        android:layout_marginTop="@dimen/margin20"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="@+id/editTextSearchTerm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextSearchTerm"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearchTerm">

        <RadioButton
            android:id="@+id/radioButtonByName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:buttonTint="#808080"
            android:gravity="center_vertical"
            android:text="@string/byName"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="145dp" />

        <RadioButton
            android:id="@+id/radioButtonByAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:buttonTint="#808080"
            android:gravity="center_vertical"
            android:text="@string/byAddress"
            tools:layout_editor_absoluteX="281dp"
            tools:layout_editor_absoluteY="145dp" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextSearchTerm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin20"
        android:layout_marginRight="@dimen/margin20"
        android:layout_marginTop="@dimen/margin70"
        android:buttonTint="#A9A9A9"
        android:ems="10"
        android:hint="@string/enterSearchTerm"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonGetRestaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size50"
        android:buttonTint="#A9A9A9"
        android:padding="@dimen/margin10"
        android:background="@drawable/shape_slight_curved_button_grey"
        android:text="@string/getRestaurants"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextForNumberOfTablesRequired"
        app:layout_constraintStart_toStartOf="@+id/editTextForNumberOfTablesRequired"
        app:layout_constraintTop_toBottomOf="@+id/editTextForNumberOfTablesRequired"
        app:layout_constraintVertical_bias="0.454" />

    <EditText
        android:id="@+id/editTextForNumberOfTablesRequired"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size40"
        android:buttonTint="#A9A9A9"
        android:ems="10"
        android:hint="@string/numberOfTablesRequired"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editTextSearchTerm"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextSearchTerm"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <ProgressBar
        android:id="@+id/progressBarForResults"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>

</ScrollView>