<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollViewForBookingDialog"
    android:fillViewport="true"
    android:nestedScrollingEnabled="true"
    tools:context="com.restroplus.activity.BookingConfirmation">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewBookingIdBookingDetailsDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16"
            android:layout_marginTop="@dimen/margin16"
            android:text="@string/bookingId"
            android:textColor="@color/darkGreen"
            android:textSize="@dimen/textSize15"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewRestaurantNameBookingDetailsDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin8"
            android:text="@string/restaurantName"
            android:textColor="@color/maroon"
            android:textSize="@dimen/textSize15"
            app:layout_constraintEnd_toEndOf="@+id/textViewBookingIdBookingDetailsDialog"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewBookingIdBookingDetailsDialog"
            app:layout_constraintTop_toBottomOf="@+id/textViewBookingIdBookingDetailsDialog" />

        <TextView
            android:id="@+id/textViewNumberOfTablesBookingDetailsDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin8"
            android:text="@string/numberOfTablesBooked"
            android:textColor="@color/violet"
            android:textSize="@dimen/textSize15"
            app:layout_constraintEnd_toEndOf="@+id/textViewRestaurantNameBookingDetailsDialog"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewRestaurantNameBookingDetailsDialog"
            app:layout_constraintTop_toBottomOf="@+id/textViewRestaurantNameBookingDetailsDialog" />

        <TextView
            android:id="@+id/textViewOrderedItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin8"
            android:layout_marginTop="@dimen/margin8"
            android:gravity="center"
            android:text="@string/orderedItems"
            android:textColor="@color/darkGreen"
            android:textSize="@dimen/textSize17"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textViewNumberOfTablesBookingDetailsDialog"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewNumberOfTablesBookingDetailsDialog"
            app:layout_constraintTop_toBottomOf="@+id/textViewNumberOfTablesBookingDetailsDialog" />

        <LinearLayout
            android:id="@+id/linearLayoutForBilling"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin8"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:paddingTop="@dimen/margin10"
            android:weightSum="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/recyclerViewForOrderedItemsBookingDetailsDialog"
            app:layout_constraintStart_toStartOf="@+id/recyclerViewForOrderedItemsBookingDetailsDialog">

            <TextView
                android:id="@+id/textViewBillingAmountBookingDetailsDialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/billingAmountInINR"
                android:textColor="@color/maroon"
                android:textSize="@dimen/textSize15" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewForOrderedItemsBookingDetailsDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin8"
            android:layout_marginTop="@dimen/margin8"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutForBilling"
            app:layout_constraintEnd_toEndOf="@+id/textViewOrderedItems"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textViewOrderedItems"
            app:layout_constraintTop_toBottomOf="@+id/textViewOrderedItems" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>
