<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="true"
    android:layout_width="match_parent"
    tools:context="com.restroplus.activity.ViewCartPage"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin8"
            android:layout_marginRight="@dimen/margin8"
            android:layout_marginTop="@dimen/margin16"
            android:gravity="center"
            android:text="@string/itemsInYourCart"
            android:textAllCaps="false"
            android:textColor="@color/cyan"
            android:textSize="@dimen/textSize20"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewForCartItems"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin8"
            android:layout_marginEnd="@dimen/margin8"
            android:layout_marginStart="@dimen/margin8"
            android:layout_marginTop="@dimen/margin16"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin4"
            android:layout_marginLeft="@dimen/margin16"
            android:layout_marginRight="@dimen/margin16"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/recyclerViewForCartItems"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/recyclerViewForCartItems">

            <TextView
                android:id="@+id/textViewForTotalAmountPayable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text="@string/amountPayable"
                android:textColor="@color/darkGreen"
                android:textSize="@dimen/textSize17" />

            <Button
                android:id="@+id/buttonCheckOutFromCartPage"
                android:layout_width="0dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_curved_button_cyan"
                android:layout_weight="0.3"
                android:text="@string/checkOut" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarPlaceBooking"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>
