<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/margin4"
    android:layout_height="wrap_content">
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.8">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="@dimen/textSize15"
                android:textStyle="bold"
                android:id="@+id/labelItemName"
                android:text="@string/itemName"
                android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pizza"
            android:textSize="@dimen/textSize15"
            android:layout_marginBottom="@dimen/margin4"
            android:textStyle="italic"
            android:id="@+id/textViewForItemName"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:textStyle="bold"
                android:id="@+id/labelItemPrice"
                android:textSize="@dimen/textSize15"
                android:text="@string/itemPrice"
                android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="@dimen/textSize15"
            android:layout_marginBottom="@dimen/margin4"
            android:id="@+id/textViewForItemPrice"
            android:text="500"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:textStyle="bold"
                android:id="@+id/labelItemCategory"
                android:text="@string/category"
                android:textSize="@dimen/textSize15"
                android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="@dimen/textSize15"
            android:id="@+id/textViewForItemCategory"
            android:layout_marginBottom="@dimen/margin4"
            android:text="starters"/>

        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content">


        <ImageButton
            android:layout_gravity="center"
            android:layout_width="@dimen/size50"
            android:layout_height="@dimen/size50"
            android:background="@mipmap/addtocarticon"
            android:gravity="center"
            android:id="@+id/buttonForAddingItem"/>

    </LinearLayout>



</LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:id="@+id/itemDivider"
        android:background="@color/silver"
        android:layout_height="@dimen/dividerHeight"/>

</LinearLayout>


